--- a/src/css/app.css
+++ b/src/css/app.css
@@ -406,6 +406,7 @@ body .backgroundImage {
   border-radius: 2em;
   opacity: 0.7;
   margin: 3% 0 0;
+  box-shadow: 10px 10px 12px 2px rgba(0, 0, 0, 0.5);
 }
 .formContainer__container .formContainer .form {
   display: inline-flex;
@@ -446,6 +447,7 @@ body .backgroundImage {
   border-radius: 0 0 15px 15px;
   overflow-y: auto;
   margin-bottom: 3%;
+  box-shadow: 10px 10px 12px 2px rgba(0, 0, 0, 0.5);
 }
 .formContainer__container .suggestions * {
   color: black;
@@ -616,6 +618,7 @@ body .backgroundImage {
   height: 100%;
   width: 100%;
   font-size: 1.05em;
+  box-shadow: 10px 10px 12px 2px rgba(0, 0, 0, 0.5);
 }
 .moreContent .content__container .content .blank,
 .moreContent .content__container .content .forecast,
@@ -844,7 +847,7 @@ body .backgroundImage {
 .moreContent .content__container .linksContainer {
   min-width: 0;
   flex: 1;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 .moreContent .content__container .linksContainer a:visited {
   color: grey;
@@ -903,19 +906,99 @@ body .backgroundImage {
 }
 
 .confirmation {
-  display: none;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  z-index: 3;
 }
 .confirmation__child {
-  width: 40%;
-  height: 30%;
-  background-color: rgba(0, 0, 0, 0.5);
+  width: 50%;
+  height: 50%;
+  background-color: rgba(0, 0, 0, 0.7);
   border-radius: 1em;
+  flex-direction: column;
+  box-shadow: 10px 10px 12px 2px rgba(0, 0, 0, 0.5);
+}
+.confirmation__child__content {
+  height: 75%;
+  flex-direction: column;
+}
+.confirmation__child__content__msg {
+  text-align: center;
+  font-style: italic;
+  font-size: 1.2em;
+  margin-top: 0;
+}
+.confirmation__child__content .rssContainer,
+.confirmation__child__content .youtubeSearchContainer {
+  flex-direction: column;
+  font-size: 1.5em;
+  width: 50%;
+  height: max-content;
+  align-items: center;
+  align-self: center;
+  padding: 0.5em;
+  border: 1px solid white;
+  border-radius: 1em;
+}
+.confirmation__child__content .contentOptions {
+  display: none;
+}
+.confirmation__child__content .youtubeSearchContainer__header p {
+  width: 100%;
+  text-align: center;
+}
+.confirmation__child__content .youtubeSearchContainer__content {
+  justify-content: center;
+}
+.confirmation__child__content .youtubeSearchContainer__content__input {
+  background-color: transparent;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  border-bottom: 1px solid lightblue;
+  max-width: 100%;
+}
+.confirmation__child__content .linksContainer {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+}
+.confirmation__child__content .linksContainer .article .link {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  min-width: 0;
+}
+.confirmation__child__content .linksContainer .article__desc {
+  display: none;
+}
+.confirmation__child__title {
+  width: 100%;
+  text-align: center;
+  font-size: 2em;
+}
+.confirmation__child__btnContainer {
+  align-self: end;
+  margin: 1em 0;
+}
+.confirmation__child__btnContainer * {
+  border: none;
+  border-radius: 15px;
+  padding: 0.7em;
+  margin-right: 1.1em;
+  cursor: pointer;
+  width: max-content;
+}
+.confirmation__child__btnContainer__saveBtn {
+  background-color: green;
+}
+.confirmation__child__btnContainer__cancelBtn {
+  background-color: red;
 }
 
 /* Responsive design */
