--- a/views/home.ejs
+++ b/views/home.ejs
@@ -133,10 +133,17 @@
       </div>
     </div>
     <div class="rssTooltip flex"></div>
-    <div class="confirmation flex">
-      <div class="confirmation__child flex">
-        <p>Hello world!</p>
-      </div>
+    <div class="confirmation">
+      <section class="confirmation__child flex">
+        <h1 class="confirmation__child__title">Watch out !</h1>
+        <span class="confirmation__child__content flex">
+          <p class="confirmation__child__content__msg">Do you really want to remove this content ?</p>
+        </span>
+        <span class="confirmation__child__btnContainer flex">
+          <button class="confirmation__child__btnContainer__cancelBtn" type="button" name="confirmation__child__btnContainer__cancelBtn">Nooooooo !</button>
+          <button class="confirmation__child__btnContainer__saveBtn" type="button" name="confirmation__child__btnContainer__saveBtn">Yep yep</button>
+        </span>
+      </section>
     </div>
     <footer class="footer flex">
       <span class="icon">̿̿ ̿̿ ̿̿ ̿'̿'\̵͇̿̿\з= ( ▀ ͜͞ʖ▀) =ε/̵͇̿̿/’̿’̿ ̿ ̿̿ ̿̿ ̿̿</span>
