--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -49,6 +49,14 @@ $greenChecked: #20df3d;
   margin-right: 1.1em;
   cursor: pointer;
 }
+@mixin forecastIcon {
+  width: 15%;
+  height: 100%;
+  justify-content: center;
+  margin-top: 0;
+  margin-right: 10%;
+  font-size: 1.5em;
+}
 
 body,
 html {
@@ -764,12 +772,7 @@ body {
             }
 
             .forecastIcon {
-              width: 15%;
-              height: 100%;
-              justify-content: center;
-              margin-top: 0;
-              margin-right: 10%;
-              font-size: 1.5em;
+              @include forecastIcon();
             }
 
             &__description__desc,
@@ -1054,6 +1057,7 @@ body {
         margin-top: 0;
       }
 
+      .forecast,
       .rssContainer,
       .youtubeSearchContainer {
         flex-direction: column;
@@ -1069,6 +1073,53 @@ body {
 
       .contentOptions {
         display: none;
+      }
+
+      .forecast {
+        width: 40%;
+
+        &__header {
+          &__title {
+            display: flex;
+            justify-content: center;
+          }
+        }
+
+        &__content {
+          width: 100%;
+
+          &__info {
+            flex-direction: column;
+            width: 50%;
+
+            * {
+              display: flex;
+            }
+
+            p {
+              margin: 0;
+            }
+
+            span {
+              margin-top: 5%;
+              align-items: center;
+            }
+
+            .forecastIcon {
+              @include forecastIcon();
+            }
+          }
+        }
+
+        &__weatherIcon {
+          width: 50%;
+          @include align(end, flex-start);
+
+          &__icon {
+            font-size: 3.5em;
+            margin-right: 5%;
+          }
+        }
       }
 
       .youtubeSearchContainer {
