--- a/src/css/app.css
+++ b/src/css/app.css
@@ -30,7 +30,7 @@ body .backgroundImage {
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: url("./wallpaper.jpg");
+  background-image: url("./wallpaper.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -392,7 +392,7 @@ body .backgroundImage {
   height: 100%;
   width: 100%;
   content: "";
-  background-image: url("./wallpaper.jpg");
+  background-image: url("./wallpaper.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
