--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -683,6 +683,10 @@ body {
         }
       }
 
+      .flex {
+        display: flex;
+      }
+
       .invisible {
         display: none;
         opacity: 0;
