Chat improvements, updated minifying mechanism

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -154,7 +154,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" charset="utf-8" type="application/javascript"></script>
   <script src="/socket.io/socket.io.js" type="application/javascript"></script>
-  <script src="/src/js/app_minified.js" charset="utf-8" type="application/javascript"></script>
+  <script src="/src/js/app.min.js" charset="utf-8" type="application/javascript"></script>
 </body>
 
 </html>
