--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home</title>
   <link rel="icon" type="image/png" href="src/favicon.png">
-  <link rel="stylesheet" href="src/css/app.css">
+  <link rel="stylesheet" href="src/css/home/app.css">
 </head>
 
 <body>
