--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,16 +11,17 @@
 
 <body>
   <div class="backgroundImage"></div>
+  <div class="backgroundColor"></div>
   <div class="wrapper flex">
     <header class="header"></header>
     <main class="mainContainer flex">
       <section class="msgContainer flex">
         <h1>Messages</h1>
         <div class="msgContainer__list flex"></div>
-        <div class="msgContainer__form flex">
+        <form class="msgContainer__form flex">
           <input class="msgContainer__form__inputMsg" type="text" name="" value="" placeholder="Say something...">
-          <button class="msgContainer__form__sendBtn" type="button" name="button">Send</button>
-        </div>
+          <button class="msgContainer__form__sendBtn" type="submit" name="msgContainer__form__sendBtn">Send</button>
+        </form>
       </section>
     </main>
     <footer class="footer flex">
