--- a/src/css/chat/chat.scss
+++ b/src/css/chat/chat.scss
@@ -45,6 +45,13 @@ body {
     @include background-image;
     background-color: rgba(0, 0, 0, 0.2);
   }
+
+  .backgroundColor {
+    background-color: rgba(0,0,0,0.6);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
 }
 
 .flex {
@@ -68,11 +75,29 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: end;
+  font-size: 1.1em;
 
   &__list {
-    width: 100%;
+    width: 70%;
     height: 100%;
     flex-direction: column;
+    align-self: start;
+    margin-left: 3em;
+    overflow: auto;
+
+    .msg {
+      width: max-content;
+      background-color: rgba(0,0,0,0.5);
+      padding: 0.6em;
+      border-radius: 1em;
+      box-shadow: 0.3em 0.2em 0.2em black;
+      margin-top: 1em;
+      transition: opacity 700ms;
+    }
+
+    .reply {
+      align-self: end;
+    }
   }
 
   &__form {
