--- a/src/css/chat/chat.css
+++ b/src/css/chat/chat.css
@@ -29,7 +29,19 @@ body .backgroundColor {
   background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
+}
+
+header {
+  z-index: 1;
+  font-size: 1.2em;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+header h1 {
+  text-align: center;
 }
 
 .flex {
@@ -40,6 +52,14 @@ body .backgroundColor {
   height: 100vh;
   flex-direction: column;
 }
+.wrapper ::placeholder {
+  color: lightgray;
+  font-style: italic;
+  min-width: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 .mainContainer {
   width: 100%;
@@ -47,43 +67,22 @@ body .backgroundColor {
   z-index: 1;
   flex-direction: column;
 }
-
-.msgContainer {
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: end;
-  font-size: 1.1em;
-}
-.msgContainer__list {
+.mainContainer__form {
   width: 70%;
-  height: 100%;
-  flex-direction: column;
-  align-self: start;
-  margin-left: 3em;
-  overflow: auto;
+  position: fixed;
+  top: 90%;
 }
-.msgContainer__list .msg {
-  width: max-content;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 0.6em;
-  border-radius: 1em;
-  box-shadow: 0.3em 0.2em 0.2em black;
-  margin-top: 1em;
-  transition: opacity 700ms;
-}
-.msgContainer__list .reply {
-  align-self: end;
-}
-.msgContainer__form__inputMsg {
+.mainContainer__form__inputMsg {
   background-color: transparent;
   border-left: none;
   border-right: none;
   border-top: none;
   border-bottom: 1px solid lightblue;
   max-width: 100%;
+  width: 90%;
+  margin-left: 3em;
 }
-.msgContainer__form__sendBtn {
+.mainContainer__form__sendBtn {
   border: 1px solid;
   border-radius: 15px;
   padding: 0.7em;
@@ -91,6 +90,51 @@ body .backgroundColor {
   cursor: pointer;
   background-color: transparent;
   margin-left: 1em;
+}
+
+.msgContainer {
+  height: 100%;
+  align-items: center;
+  font-size: 1.1em;
+}
+.msgContainer__list {
+  width: 65%;
+  height: 82%;
+  flex-direction: column;
+  align-self: start;
+  margin-left: 3em;
+  overflow: hidden;
+  top: 3em;
+  position: fixed;
+}
+.msgContainer__list .msg {
+  width: max-content;
+  max-width: 45%;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0.6em;
+  border-radius: 1em;
+  box-shadow: 0.3em 0.2em 0.2em black;
+  margin-top: 1em;
+  transition: opacity 700ms;
+  display: flex;
+  flex-wrap: wrap;
+}
+.msgContainer__list .reply {
+  align-self: end;
+}
+.msgContainer__botInfo {
+  height: 100%;
+  width: 30%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 1em black;
+  font-size: 1.1em;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  right: 0;
 }
 
 /*# sourceMappingURL=chat.css.map */
