--- a/views/home.ejs
+++ b/views/home.ejs
@@ -145,12 +145,7 @@
         </span>
       </section>
     </div>
-    <footer class="footer flex">
-      <span class="icon">̿̿ ̿̿ ̿̿ ̿'̿'\̵͇̿̿\з= ( ▀ ͜͞ʖ▀) =ε/̵͇̿̿/’̿’̿ ̿ ̿̿ ̿̿ ̿̿</span>
-      <span class="credits flex">
-        <p>BadassBoard, proudly handmade in Belgium 🍺</p>
-      </span>
-    </footer>
+    <%- include('footer'); %>
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" charset="utf-8" type="application/javascript"></script>
   <script src="/socket.io/socket.io.js" type="application/javascript"></script>
