--- a/src/css/chat/chat.css
+++ b/src/css/chat/chat.css
@@ -18,30 +18,30 @@ body .backgroundImage {
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: url("./wallpaper.png");
+  background-image: url("../wallpaper.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  background-color: rgba(0, 0, 0, 0.2);
 }
 body .backgroundColor {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.4);
   width: 100%;
   height: 100%;
   position: fixed;
 }
 
-header {
-  z-index: 1;
+.header {
+  z-index: 2;
   font-size: 1.2em;
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
+  justify-content: end;
 }
-header h1 {
-  text-align: center;
+.header__homeIcon {
+  align-self: center;
+  margin-right: 1em;
+  cursor: pointer;
+  padding-top: 0.5em;
 }
 
 .flex {
@@ -67,49 +67,28 @@ header h1 {
   z-index: 1;
   flex-direction: column;
 }
-.mainContainer__form {
-  width: 70%;
-  position: fixed;
-  top: 90%;
-  height: 5%;
-}
-.mainContainer__form__inputMsg {
-  background-color: transparent;
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  border-bottom: 1px solid lightblue;
-  max-width: 100%;
-  width: 90%;
-  margin-left: 3em;
-}
-.mainContainer__form__sendBtn {
-  border: 1px solid;
-  border-radius: 15px;
-  padding: 0.7em;
-  margin-right: 1.1em;
-  cursor: pointer;
-  background-color: transparent;
-  margin-left: 1em;
-}
 
 .msgContainer {
   height: 95%;
   align-items: center;
   font-size: 1.1em;
 }
-.msgContainer__list {
+.msgContainer__msgList {
   width: 65%;
   height: 100%;
   flex-direction: column;
   align-self: start;
   margin-left: 3em;
   overflow: hidden;
-  top: 3em;
-  position: relative;
   flex: 2;
 }
-.msgContainer__list .msg {
+.msgContainer__msgList__list {
+  height: 100%;
+  width: 100%;
+  padding-bottom: 1.5em;
+  flex-direction: column;
+}
+.msgContainer__msgList__list .msg {
   width: max-content;
   max-width: 45%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -120,10 +99,29 @@ header h1 {
   transition: opacity 700ms;
   display: flex;
   flex-wrap: wrap;
+  height: max-content;
 }
-.msgContainer__list .reply {
+.msgContainer__msgList__list .reply {
   align-self: end;
   margin-right: 1em;
+}
+.msgContainer__msgList__form__inputMsg {
+  background-color: transparent;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  border-bottom: 1px solid lightblue;
+  max-width: 100%;
+  width: 90%;
+}
+.msgContainer__msgList__form__sendBtn {
+  border: 1px solid;
+  border-radius: 15px;
+  padding: 0.7em;
+  margin-right: 1.1em;
+  cursor: pointer;
+  background-color: transparent;
+  margin-left: 1em;
 }
 .msgContainer__botInfo {
   height: 100%;
@@ -136,6 +134,9 @@ header h1 {
   font-size: 1.1em;
   z-index: 1;
   align-self: end;
+}
+.msgContainer__botInfo__icon {
+  max-width: 75%;
 }
 
 /*# sourceMappingURL=chat.css.map */
