--- a/src/css/chat/chat.scss
+++ b/src/css/chat/chat.scss
@@ -1,5 +1,5 @@
 @mixin background-image {
-  background-image: url("./wallpaper.png");
+  background-image: url("../wallpaper.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -55,27 +55,27 @@ body {
     left: 0;
     right: 0;
     @include background-image;
-    background-color: rgba(0, 0, 0, 0.2);
   }
 
   .backgroundColor {
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,0.4);
     width: 100%;
     height: 100%;
     position: fixed;
   }
 }
 
-header {
-  z-index: 1;
+.header {
+  z-index: 2;
   font-size: 1.2em;
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
+  justify-content: end;
 
-  h1 {
-    text-align: center;
+  &__homeIcon {
+    align-self: center;
+    margin-right: 1em;
+    cursor: pointer;
+    padding-top: 0.5em;
   }
 }
 
@@ -97,25 +97,6 @@ header {
   height: 100%;
   z-index: 1;
   flex-direction: column;
-
-  &__form {
-    width: 70%;
-    position: fixed;
-    top: 90%;
-    height:5%;
-
-    &__inputMsg {
-      @include input-style();
-      width: 90%;
-      margin-left: 3em;
-    }
-
-    &__sendBtn {
-      @include btn-style(1px solid);
-      background-color: transparent;
-      margin-left: 1em;
-    }
-  }
 }
 
 .msgContainer {
@@ -123,33 +104,52 @@ header {
   align-items: center;
   font-size: 1.1em;
 
-  &__list {
+  &__msgList {
     width: 65%;
     height: 100%;
     flex-direction: column;
     align-self: start;
     margin-left: 3em;
     overflow: hidden;
-    top: 3em;
-    position: relative;
     flex: 2;
 
-    .msg {
-      width: max-content;
-      max-width: 45%;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 0.6em;
-      border-radius: 1em;
-      box-shadow: 0.3em 0.2em 0.2em black;
-      margin-top: 1em;
-      transition: opacity 700ms;
-      display: flex;
-      flex-wrap: wrap;
+    &__list {
+      height: 100%;
+      width: 100%;
+      padding-bottom: 1.5em;
+      flex-direction: column;
+
+      .msg {
+        width: max-content;
+        max-width: 45%;
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 0.6em;
+        border-radius: 1em;
+        box-shadow: 0.3em 0.2em 0.2em black;
+        margin-top: 1em;
+        transition: opacity 700ms;
+        display: flex;
+        flex-wrap: wrap;
+        height: max-content;
+      }
+
+      .reply {
+        align-self: end;
+        margin-right: 1em;
+      }
     }
 
-    .reply {
-      align-self: end;
-      margin-right: 1em;
+    &__form {
+      &__inputMsg {
+        @include input-style();
+        width: 90%;
+      }
+
+      &__sendBtn {
+        @include btn-style(1px solid);
+        background-color: transparent;
+        margin-left: 1em;
+      }
     }
   }
 
@@ -163,5 +163,9 @@ header {
     font-size: 1.1em;
     z-index: 1;
     align-self: end;
+
+    &__icon {
+      max-width: 75%;
+    }
   }
 }
