--- a/src/css/home/app.css
+++ b/src/css/home/app.css
@@ -74,7 +74,7 @@ body .backgroundImage {
 
 .header {
   display: inline-flex;
-  position: absolute;
+  position: fixed;
   top: 1%;
   left: 0;
   width: 100%;
