--- a/src/css/chat/chat.css
+++ b/src/css/chat/chat.css
@@ -51,7 +51,7 @@ body .backgroundColor {
 .wrapper {
   height: 100vh;
   flex-direction: column;
-  position: fixed;
+  overflow: hidden;
 }
 .wrapper ::placeholder {
   color: lightgray;
@@ -76,7 +76,7 @@ body .backgroundColor {
 }
 .msgContainer__msgList {
   width: 65%;
-  height: 100%;
+  height: 95%;
   flex-direction: column;
   align-self: start;
   margin-left: 3em;
