--- a/src/css/chat/chat.scss
+++ b/src/css/chat/chat.scss
@@ -86,7 +86,7 @@ body {
 .wrapper {
   height: 100vh;
   flex-direction: column;
-  position: fixed;
+  overflow: hidden;
 
   ::placeholder {
     @include placeholder();
@@ -107,7 +107,7 @@ body {
 
   &__msgList {
     width: 65%;
-    height: 100%;
+    height: 95%;
     flex-direction: column;
     align-self: start;
     margin-left: 3em;
