--- a/src/css/chat/chat.scss
+++ b/src/css/chat/chat.scss
@@ -173,7 +173,8 @@ body {
     align-self: end;
 
     &__icon {
-      max-width: 75%;
+      max-width: 50%;
+      max-height: 25%;
     }
   }
 }
