--- a/src/css/home/app.css
+++ b/src/css/home/app.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: distant_galaxyregular;
-  src: url("./fonts/DISTGRG_-webfont.woff");
+  src: url("../fonts/DISTGRG_-webfont.woff");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Ubuntu Regular";
-  src: url("./fonts/ubuntu/Ubuntu-R.ttf");
+  src: url("../fonts/ubuntu/Ubuntu-R.ttf");
   font-weight: normal;
   font-style: normal;
 }
@@ -30,7 +30,7 @@ body .backgroundImage {
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: url("./wallpaper.png");
+  background-image: url("../wallpaper.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -362,7 +362,7 @@ body .backgroundImage {
   width: auto;
   height: auto;
   padding: 0.75%;
-  margin: 1.5% 0;
+  margin: 1% 0;
   border: 1px solid white;
   border-radius: 15px;
   background-color: rgba(0, 0, 0, 0.5);
@@ -392,7 +392,7 @@ body .backgroundImage {
   height: 100%;
   width: 100%;
   content: "";
-  background-image: url("./wallpaper.png");
+  background-image: url("../wallpaper.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
