--- a/src/css/home/app.scss
+++ b/src/css/home/app.scss
@@ -2,13 +2,13 @@ $contentBackground: rgba(0, 0, 0, 0.5);
 $greenChecked: #20df3d;
 @font-face {
   font-family: distant_galaxyregular;
-  src: url("./fonts/DISTGRG_-webfont.woff");
+  src: url("../fonts/DISTGRG_-webfont.woff");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'Ubuntu Regular';
-  src: url("./fonts/ubuntu/Ubuntu-R.ttf");
+  src: url("../fonts/ubuntu/Ubuntu-R.ttf");
   font-weight: normal;
   font-style: normal;
 }
@@ -20,7 +20,7 @@ $greenChecked: #20df3d;
   flex-direction: $direction;
 }
 @mixin background-image {
-  background-image: url("./wallpaper.png");
+  background-image: url("../wallpaper.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -418,7 +418,7 @@ body {
     width: auto;
     height: auto;
     padding: 0.75%;
-    margin: 1.5% 0;
+    margin: 1% 0;
     border: 1px solid white;
     border-radius: 15px;
     background-color: $contentBackground;
