--- a/src/css/chat/chat.scss
+++ b/src/css/chat/chat.scss
@@ -125,6 +125,11 @@ body {
         * {
           margin-top: 0.5em;
         }
+
+        a {
+          margin-left: 0.5em;
+          font-style: italic;
+        }
       }
 
       .msg {
