Applied SASS conventions, code cleanup, 404 error page style fix

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chat</title>
   <link rel="icon" type="image/png" href="src/favicon.png">
-  <link rel="stylesheet" href="src/css/chat/chat.css">
+  <link rel="stylesheet" href="src/scss/chat/chat.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
           </form>
         </div>
         <section class="msgContainer__botInfo flex">
-          <img class="msgContainer__botInfo__icon" src="./src/css/chat/bot.png" alt="Bot icon">
+          <img class="msgContainer__botInfo__icon" src="./src/scss/chat/bot.png" alt="Bot icon">
           <p><%=botName%></p>
         </section>
       </section>
