Updated style, added settings support

--- a/src/scss/pages/_chat.scss
+++ b/src/scss/pages/_chat.scss
@@ -11,7 +11,7 @@
   width: 100%;
   justify-content: end;
 
-  &__homeIcon {
+  svg {
     align-self: center;
     margin-right: 1em;
     cursor: pointer;
