--- a/src/scss/home/app.scss
+++ b/src/scss/home/app.scss
@@ -4,6 +4,8 @@
 @import '../base/fonts';
 @import '../base/body';
 
+@import '../layouts/blur';
 @import '../layouts/flex';
+@import '../layouts/settings';
 
 @import '../pages/home';
