--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -30,17 +30,17 @@
       <input class="backgroundImageUploadForm__InputUrl" type="text" name="backgroundImageUrl" value="" placeholder='I prefer pasting an URL'>
     </form>
     <h2 class="settings__child__heading2 settings__child__heading">Awesome features corner 😇</h2>
-    <h3>Weather forecast</h3>
+    <h3 class="settings__child__heading3 settings__child__heading">Weather forecast</h3>
     <span class="owmToken flex">
       <span class="owmToken__Comment">So you want to use weather forecast feature ? You can update your OpenWeatherMap API token here :</span>
       <input class="owmToken__input" type="text" name="owmToken__input" value="" placeholder="OpenWeatherMap API token">
     </span>
-    <h3>Chat</h3>
+    <h3 class="settings__child__heading3 settings__child__heading">Chat</h3>
     <form class="chatCustomizationForm flex" action="/" enctype="multipart/form-data" method="post">
-      <span class="chatCustomizationForm__comment">Found a brand-new friendly name for the bot ?</span>
+      <span class="chatCustomizationForm__comment">I want to refresh that stuff !</span>
       <button class="chatCustomizationForm__btn" type="button" name="chatBotAvatarUploadBtn">Let's upload a super cool avatar !</button>
       <input class="chatCustomizationForm__inputFile" type="file" name="chatBotAvatarUploadInput" accept="image/png, image/jpg">
-      <input class="chatCustomizationForm__inputName" type="text" name="chatBotNameInput" value="" placeholder='modify the name here'>
+      <input class="chatCustomizationForm__inputUrl" type="text" name="chatBotNameInput" value="" placeholder='Insert a new avatar URL'>
     </form>
     <span class="settings__BtnContainer">
       <button class="settings__child__cancelBtn" type="button" name="cancelSettings">Cancel</button>
