Added SASS prefixes to extend browser support

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Page not found</title>
   <link rel="icon" type="image/png" href="./src/favicon.png">
-  <link rel="stylesheet" href="./src/scss/404.css">
+  <link rel="stylesheet" href="src/scss/prefixed/404.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
