--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chat</title>
   <link rel="icon" type="image/png" href="src/favicon.png">
-  <link rel="stylesheet" href="src/scss/chat/chat.css">
+  <link rel="stylesheet" href="src/scss/prefixed/chat.css">
 </head>
 
 <body>
